# Formosa-Dual-Objective-Alignment

./: .gitignore  README.md  pyproject.toml  train_dual.py
configs/: base.yaml
configs/experiments/: v0_zero_shot.yaml  v1_caption_only.yaml  v2_contrast_only.yaml  v3_hero.yaml  v4_curriculum.yaml  v5_hard_neg.yaml
configs/experiments/ablations/: lambda_0.0.yaml  lambda_0.1.yaml  lambda_0.3.yaml  lambda_0.5.yaml  neg_hard.yaml  tau_0.05.yaml  (+3 more)
configs/profiles/: dev_mac.yaml  dev_smoke.yaml  prod_gb10.yaml
configs/tag_seeds/: tier1_zh_tw.txt
docs/: FORMOSA_DUAL_CONSTRUCTION_SPEC.md  config_reference.md  failure_modes.md  runbook_gb10.md  runbook_mac.md
eval/: retrieval_only.py  run_all_metrics.py  zero_shot.py
requirements/: base.txt  gb10.txt
scripts/: annotate_tags.py  audit_annotations.py  build_splits.py  build_tag_vocab.py  download_models.py  make_synthetic_data.py  prepare_hf_dataset.py  verify_environment.py
src/formosa_dual/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_checkpoint_roundtrip.py  test_dataset_pipeline.py  test_dual_model_forward.py  test_trainer_one_step.py
tests/smoke/: test_smoke_mac_3b.py  test_smoke_mac_synthetic.py
tests/unit/: test_annotate_tags_script.py  test_attention_pooler.py  test_backbone_compat.py  test_config_loader.py  test_culturalness.py  test_dataset_image_resolution.py  test_dual_objective_loss_construction.py  test_lambda_schedule.py  test_multi_pos_infonce.py  test_negative_sampler.py  test_projection_head.py  test_splits.py  test_tag_annotator.py  test_tag_projector.py
(+42 files in other folders)
