[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formosa-dual"
version = "0.1.0"
description = "Formosa-VLM dual-objective alignment: caption SFT + cultural contrastive auxiliary"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ren-He Huang" }]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "black>=24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that take >10s",
    "gpu: tests requiring CUDA",
    "smoke: smoke tests for end-to-end verification",
]
